[package]
name = "tvdb"
version = "0.3.1"
authors = ["dbr <dbr.onix@gmail.com>"]

description = "API wrapper to http://thetvdb.com (open database for TV episode data)"
repository = "http://github.com/dbr/tvdb-rs"
readme = "readme.md"
keywords = ["api", "tvdb", "web"]
license = "Unlicense"

[dependencies]
hyper = "0.9"
xmltree = "0.3"
url = "1.1"
log = "0.3"

[dev-dependencies]
argparse = "0.2"
env_logger = "0.3"
rand = "0.3"

[[example]]
name = "tvdb-lookup"

[[example]]
name = "tvdb-random"
